# libextractor-python

./: .gitignore  .gitlab-ci.yml  .mailmap  AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.debian  arrr  bootstrap  configure.ac  extract.py  extractor.h  extractor.py  guix-env.scm  libextractor_python.c  libextractor_python_setup.py  setup.py
.ci/: Dockerfile
examples/: extract.py
libextractor/: extractor.py
libextractor/examples/: __main__.py  extract.py
